--- a/public/index.html
+++ b/public/index.html
@@ -30,19 +30,19 @@
           <h1 id="text3">
             This performance is best experienced with headphones
           </h1>
-          <img id="text3_image" src="icons/headphones3.png" />
+          <img id="text3_image" src="icons/headphoneJPGCropped.jpg" />
         </div>
         <div class="textcontainer nodisplay roboticfont" id="textcontainer3">
           <h1 id="text4">
             We recommend being in an isolated environment to avoid interruptions
           </h1>
-          <img id="text4_image" src="icons/roomJPG.jpg" />
+          <img id="text4_image" src="./icons/roomJPGCropped.jpg" />
         </div>
         <div class="textcontainer nodisplay roboticfont" id="textcontainer4">
           <h1 id="text5">
             This performance is best experienced in total darkness.
           </h1>
-          <img id="text5_image" src="icons/lightbulbJPG.jpg" />
+          <img id="text5_image" src="icons/lightbulbJPGCropped.jpg" />
           <h2 id="text6">
             Now it is the time to draw the curtains, switch off your lights, and
             move if necessary.
