--- a/public/index.html
+++ b/public/index.html
@@ -248,71 +248,81 @@
 
         <a-plane
         id="shadow0"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="0 0 0"
+        position="-62.635 1 -4.135"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow1"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="2 0 0"
+        position="2.000 1 41.157"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow2"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="3 0 0"
+        position="41.484 1 0"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow3"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="4 0 0"
+        position="4.000 1 -60.489"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow4"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="5 0 0"
+        position="-17.134 1 -68.070"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow5"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="6 0 0"
+        position="34.712 1 -37.239"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow6"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="7 0 0"
+        position="42.020 1 34.669"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow7"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="8 0 0"
+        position="-27.739 1 39.733"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow8"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="9 0 0"
+        position="-43.532 1 -38.499"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
         <a-plane
         id="shadow9"
+        visible="false"
         material="src: #shadow; transparent: true"
-        position="10 0 0"
+        position="-54.006 1 17.036"
         scale="10 10 10"
         look-at="#lobbyCam"
         ></a-plane>
